--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -5,7 +5,7 @@ android {
   buildToolsVersion "29.0.3"
 
   defaultConfig {
-    applicationId "com.rilixtech.countrycodepicker"
+    applicationId "com.spisoft.countrycodepicker"
     minSdkVersion 14
     targetSdkVersion 29
     versionCode 242
